navbar on mobile screen fixed

--- a/css/theme-styles.sass
+++ b/css/theme-styles.sass
@@ -683,6 +683,7 @@ header
         padding: .75rem 2rem
         margin-left: unset !important
         background: #fff !important
+        overflow-y: auto
         transform: translateX(-120vw)
         transition: 1s
 
